--- a/Salabytest/app/views/static_pages/barn/norsk.html.erb
+++ b/Salabytest/app/views/static_pages/barn/norsk.html.erb
@@ -1,5 +1,4 @@
-<div id="religion-background-wrapper">
-
+<img draggable="false" src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
 
 <section class="test-section">
 
