--- a/Salabytest/app/views/static_pages/barn/rle.html.erb
+++ b/Salabytest/app/views/static_pages/barn/rle.html.erb
@@ -31,7 +31,7 @@
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"> </a>
+          <a href="rle/islam.html"><img src="/assets/barn/RLE/islam.png" draggable="false" alt="Islambilde"> </a>
         </div>
       </div>
 
