--- a/Salabytest/app/views/static_pages/barn/norsk.html.erb
+++ b/Salabytest/app/views/static_pages/barn/norsk.html.erb
@@ -1,4 +1,4 @@
-<img draggable="false" src="/assets/barn/skoleveien.jpg" id="background-image" alt="bakgrunnsbilde">
+<img draggable="false" src="/assets/norsk/norskbg.jpg" id="background-image" alt="bakgrunnsbilde">
 
 <section class="test-section">
 
@@ -54,7 +54,7 @@
 
       <div class="large-3 small-6 medium-4 columns">
         <div class="align-center  bilde-hover">
-          <img src="/assets/barn/RLE/sikhisme.png" draggable="false" alt="Sikhismebilde">
+          <a href="#"><img src="http://placehold.it/350x150" draggable="false" alt="placeholder"></a>
         </div>
       </div>
 
