--- a/Salabytest/app/views/static_pages/index.html.erb
+++ b/Salabytest/app/views/static_pages/index.html.erb
@@ -24,9 +24,9 @@
     </div>
   </div>
 </div>
-<div id="personPos">
   <div class="row">
-    <div class="large-6 small-12 columns">
+      <div id="personPos">
+    <div class="large-6 medium-12 small-12 columns">
       <img src="assets/index/Emre_1.png" alt="Emre Person">
     </div>
   </div>
