--- a/Salabytest/app/assets/stylesheets/index/intro.css
+++ b/Salabytest/app/assets/stylesheets/index/intro.css
@@ -99,8 +99,12 @@ input[type="text"],input[type="password"] {
     position: absolute;
     right: 0;
     bottom: 0;
-    max-width: 10em;
+    width: 10em;
     
+}
+
+#personPos img {
+    min-width: 20em;
 }
 /*
 
