Endret linker i breadcrumbs

--- a/Salabytest/app/views/static_pages/barn/engelsk.html.erb
+++ b/Salabytest/app/views/static_pages/barn/engelsk.html.erb
@@ -13,7 +13,7 @@
     <ul class="breadcrumbs">
         <li><a href="/static_pages/barn/forside.html">Hjem</a></li>
         <li class="unavailable"><a href="#">Kanal S</a></li>
-        <li class="current"><a href="/static_pages/barn/rle">RLE</a></li>
+        <li class="current"><a href="/static_pages/barn/engelsk">Engelsk</a></li>
     </ul>
   </div>
 
