--- a/Salabytest/app/views/static_pages/barn/norsk.html.erb
+++ b/Salabytest/app/views/static_pages/barn/norsk.html.erb
@@ -12,7 +12,7 @@
     <ul class="breadcrumbs">
         <li><a href="/static_pages/barn/forside.html">Hjem</a></li>
         <li class="unavailable"><a href="#">Kanal S</a></li>
-        <li class="current"><a href="/static_pages/barn/rle">RLE</a></li>
+        <li class="current"><a href="/static_pages/barn/norsk">Norsk</a></li>
     </ul>
   </div>
 
