--- a/Salabytest/app/assets/stylesheets/voksen/kompetanse.css
+++ b/Salabytest/app/assets/stylesheets/voksen/kompetanse.css
@@ -1,7 +1,7 @@
 
 #kompetanse {
     width: auto;
-    height: auto;
+    height: 700px;
 }
 
 /*********************************************************************************************************/
